welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(nPas: Int, versLAvant: Boolean) {
^Program:8: error: Missing closing brace `}' assumed here
}
^