welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nPas: Int, versLAvant: Boolean) {
	if (versLAvant == true)
		{ for (i <- 1 to nPas)
			{avance()}
	else {for (k <- 1 to nPas)
			{recule()}
}
